--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,6 @@ body {
   color: rgb(255, 0, 0);
 }
 
-
 form {
   padding: 10px;
 }
@@ -70,7 +69,7 @@ input[type="submit"] {
   border-radius: 15%;
 }
 
-input[type="submit"]:hover{
+input[type="submit"]:hover {
   background-color: orange;
 }
 
@@ -79,14 +78,21 @@ input[type="submit"]:hover{
   padding: 10px auto;
 }
 
-button{
+button {
   border: 0;
   padding: 10px;
   margin: 10px auto;
 }
 
-.bi-trash{
+.bi-trash {
   display: float;
   float: right;
-  color: rgb(245, 69, 69)
+  color: rgb(245, 69, 69);
+}
+
+.loader {
+  text-align: center;
+  font-weight: 300;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
 }
